syntax = "proto3";


message ActionData {
  int32 channelID = 1;
  string channelName = 2;
  int32 userID = 3;
  string userinput = 4;
  string username = 5;
  string message = 6;
}


message ActionRequest {
  string Action = 2;
  ActionData Actiondata = 3;

}

message ActionResponse {
  int32 code = 1;
  string message = 2;
}



service ActionService {
  rpc SendAction(ActionRequest) returns (ActionResponse) {}
}




